<resources>
    <string name="findwatch">Find the watch</string>
    <string name="watchtime">Watch Time</string>
    <string name="systemtime">System Time</string>
    <string name="notif_explain">Explain:</string>
    <string name="notif_messge">Message alerts need to open notifications or auxiliary functions</string>
    <string name="open_notif">Open the notice</string>
    <string name="open_function">Open the auxiliary function</string>
    <string name="device_times">Equipment time</string>
    <string name="now_times">current time</string>
    <string name="get_device_times">Get equipment time</string>
    <string name="correct_pointer_times">The pointer is wrong? To correct</string>
    <string name="thousand">thousand steps</string>
    <string name="sporttimes">Number of times</string>
    <string name="grandtotalstep">Cumulative step</string>
    <string name="grandtotal">Cumulative duration</string>
    <string name="sportdata">Movement data</string>
    <string name="avg_speed">Avg speed</string>
    <string name="long_onclick">Long press \'+\' and \'-\' can be set to adjust the larger angle</string>
    <string name="add_sharpe">Synthesis and sharing</string>
    <string name="syncy_data">Synchronize the data</string>
    <string name="connted">connected</string>
    <string name="disconnted">Disconnected</string>
    <string name="nodata">No Data</string>
    <string name="age">Age</string>
    <string name="alarm_eat">Having dinner</string>
    <string name="alarm_medicine">Take pills</string>
    <string name="alarm_dring">Drink water</string>
    <string name="alarm_sp">Sleep</string>
    <string name="alarm_awakes">Get up</string>
    <string name="alarm_spr">motion</string>
    <string name="alarm_metting">Meeting</string>
    <string name="alarm_custom">Custom</string>
    <string name="history_times">Historical time</string>
    <string name="search_alert">Search for equipment Please turn on your phone Bluetooth and GPS</string>
    <string name="sleep_deep">Deep sleep</string>
    <string name="sleep_light">Light sleep</string>
    <string name="long_when">When long</string>
    <string name="sleep_asleep">Fall asleep time</string>
    <string name="recovery_count">Recovery times</string>
    <string name="recovery_time">Recovery time</string>
    <string name="mine_equipment">My equipment</string>
    <string name="low_voltage">Low voltage limit</string>
    <string name="high_voltage">High voltage restriction</string>
    <string name="year">Year</string>
    <string name="news">News</string>
    <string name="messages">Receive new messages</string>
    <string name="system_settings">System settings</string>
    <string name="device_manager">Device management</string>
    <string name="guide">School hour Guide</string>
    <string name="step_one">1.\t When the watch is connected to the App, click the zeroing button first</string>
    <string name="step_two">2.\t Select clockwise, minute, press the + and - adjustable needle to 12:00 whole</string>
    <string name="step_three">3.\t Click Finish button to achieve automatic needle chasing time</string>
    <string name="manualsleep">Manual sleep</string>
    <string name="automaticsleep">Automatic sleep</string>
    <string name="dlog">Load...</string>
    <string name="minezhen">Minute hand</string>
    <string name="hourzhen">Hour hand</string>
    <string name="zero">Return to zero</string>
    <string name="setmi">Imperial system</string>
    <string name="setkm">Metric</string>
    <string name="jiaozhen">School pin</string>
    <string name="unit">unit</string>
    <string name="hearting">checking</string>
    <string name="heartcheck">Heart rate test</string>
    <string name="auxiliary_function">If you open the message, or you can\'t receive a message reminder, you can try to open the auxiliary function.
        \n If you can receive a notification message, then you can ignore its presence, or you can notify or restrict the accessibility to one.
        \n (this function is set up to solve the problem that some models can not receive messages and can receive messages. This feature will cause messages to be reminded and repeated.)</string>
    <string name="siren_str">Ranking List</string>
    <string name="personal_str">Personal data</string>
    <string name="function_str">Function setting</string>
    <string name="find_str">Find friends</string>
    <string name="waking_state">Sober state</string>
    <string name="shallow_sleep">Shallow sleep</string>
    <string name="deep_sleep">Deep sleep</string>
    <string name="mileage_km">Mileage/km</string>
    <string name="ranking">Ranking</string>
    <string name="daily_distancia">Al movimiento a distancia</string>
    <string name="notice_str">Notify</string>
    <string name="shock_str">Shock</string>
    <string name="time_forma">Time forma</string>
    <string name="advanced_setting">Advanced setting</string>
    <string name="add_frendes">Add friends</string>
    <string name="scan_frend">Search</string>
    <string name="reset_device">Reset device</string>
    <string name="heart_rate_test">heart rate test</string>
    <string name="heart_rate_warning_range">Heart rate warning range</string>
    <string name="close_str">off</string>
    <string name="weak_str">weak</string>
    <string name="standard_str">standard</string>
    <string name="strong_str">strong</string>
    <string name="preset_sleep">Preset sleep</string>
    <string name="missed_calls">Missed Calls</string>
    <string name="sms_reminder">SMS reminder</string>
    <string name="mailbox_reminder">Mailbox reminder</string>
    <string name="social_reminder">Social reminder</string>
    <string name="calendar_alarm">Calendar Alarm</string>
    <string name="today_step">Number of steps today</string>
    <string name="goal_step">Target</string>
    <string name="str_one">You can set up various types of reminders every day</string>
    <string name="str_two">Select alert type</string>
    <string name="str_three">Long press to delete alarm clock</string>
    <string name="str_four">Select reminder time and date</string>
    <string name="str_five">Once at the point of warning, the device will vibrate gently and display the appropriate icon to alert you</string>
    <string name="noright">You are currently a visitor and can not modify the information</string>
    <string name="newversion">There is a new version, whether it is updated?</string>
    <string name="visitor_enter">Visitors enter</string>
    <string name="login_alert">Whether to enter as a tourist?</string>
    <string name="settarget_steps">Target number of steps </string>
    <string name="operation">Instructions</string>
    <string name="today_data">Today data</string>
    <string name="msg_jiange">Message alert interval</string>
    <string name="psm">Power saving mode</string>
    <string name="setting_pair">Jump to the system settings for Bluetooth pairing</string>
    <string name="cancle_pair">Disconnect Bluetooth, jump to system settings, cancel pairing</string>
    <string name="gps_alert">This function need to open the GPS permissions operation, whether confirmed open?</string>
    <string name="clocktimes">You need to select the number of times the alarm clock is repeated!</string>
    <string name="notsportdata">There is no historical trajectory, and it cannot be clicked.</string>
    <string name="version">1.1.3</string>
    <string name="fuwuqi">The link server failed</string>
    <string name="notdevice">You do not have Bluetooth devices around!</string>
    <string name="zuigaoxinlv">Maximum heart rate</string>
    <string name="zuidixinlv">Minimum heart rate</string>
    <string name="pinjunxin">Mean heart rate</string>
    <string name="shangzhou">Last week</string>
    <string name="benzhou">This week</string>
    <string name="shangyue">Last month</string>
    <string name="benyue">This month</string>
    <string name="XIAOHAO">Consumo</string>
    <string name="paces">Pace</string>
    <string name="xiaoxitixing">Open the message to remind, need to open the auxiliary service function, please open the auxiliary switch.</string>
    <string name="xuanzeshijian">Please select a time</string>
    <string name="minute">M</string>
    <string name="Bind_failed">Bind failed</string>
    <string name="Binding_success">Binding success</string>
    <string name="bluetooth_disconnected">Bluetooth disconnected</string>
    <string name="bangdinged">Bound</string>
    <string name="sports_history">Sports history</string>
    <string name="good">Good</string>
    <string name="mild_pollution">Mild pollution</string>
    <string name="moderate_pollution">Moderate pollution</string>
    <string name="heavy_pollution">Heavy pollution</string>
    <string name="serious_pollution">Serious pollution</string>
    <string name="save_record">Save record</string>
    <string name="upgrade">Upgrade in>></string>
    <string name="latest_version">Is the latest version</string>
    <string name="upgrade_completed">Upgrade completed</string>
    <string name="auto_upgrade">Automatic upgrade....</string>
    <string name="deleda">Be sure to delete?</string>
    <string name="zerostep">0 Step</string>
    <string name="zeroday">0 Day</string>
    <string name="zerokm">0 km</string>
    <string name="wechat_home_page">4 return to WeChat sports home page, enter the list, then you can see the device is data has been synchronized to the WeChat campaign, if you can not synchronize, please refresh the list of several pages</string>
    <string name="openwhchat">3 open WeChat, enter WeChat, WeChat home page right click the settings button in the upper right corner, find the "record motion data" column, select "add a data source, you will search to your purchase of equipment manufacturers the public number, please add this public number as a data source</string>
    <string name="please_disconnect">2 bind successfully, please disconnect the current connection</string>
    <string name="first_use">1 first use, please bind the device</string>
    <string name="operation_method">Operation method</string>
    <string name="bangding">Binding</string>
    <string name="wechat_sports">Access to WeChat sports, and friends to share the fun of sports!</string>
    <string name="stop">End</string>
    <string name="continues">Continue</string>
    <string name="xiaohao">Consume  0kcal</string>
    <string name="Pace">Pace00"00</string>
    <string name="distance">Distance: km</string>
    <string name="total_time">Total time</string>
    <string name="history_record">History record</string>
    <string name="third_party_login">Third party login</string>
    <string name="evening">Night11:59</string>
    <string name="before_dawn">Before dawn12:00</string>
    <string name="measurement_results">measurement results</string>
    <string name="call_reminder">Call reminder</string>
    <string name="complete">Complete</string>
    <string name="cancle">Cancel</string>
    <string name="kongjian">QQ Zone</string>
    <string name="wechat_freinds">WeChat friends</string>
    <string name="wechat_quan">WeChat circle</string>
    <string name="fack_book">Facebook</string>
    <string name="Targetsetting">Goal setting</string>
    <string name="hour">H</string>
    <string name="km">KM</string>
    <string name="steps">Step</string>
    <string name="calories">Calorie</string>
    <string name="question_detail">Problem details</string>
    <string name="contact_info">Contact information</string>
    <string name="describe_problem">Please describe your problem</string>
    <string name="leave_phone">Please leave your phone or email to contact us</string>
    <string name="daily_numberofsteps">Daily exercise</string>
    <string name="daily_sleepduration">Daily sleep duration</string>
    <string name="daily_consunergy">Daily energy expenditure</string>
    <string name="twitter">Twitter</string>
    <string name="qq">QQ</string>
</resources>