<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">


    <include layout="@layout/b18i_titil_bar" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/size_5"
        android:lineSpacingExtra="5dp"
        android:padding="@dimen/size_10"
        android:text="@string/step_one"
        android:textColor="#222222"
        android:textSize="@dimen/text_size_16" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:lineSpacingExtra="5dp"
        android:padding="@dimen/size_15"
        android:text="@string/step_two"
        android:textColor="#222222"
        android:textSize="@dimen/text_size_16" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:lineSpacingExtra="5dp"
        android:padding="@dimen/size_15"
        android:text="@string/step_three"
        android:textColor="#222222"
        android:textSize="@dimen/text_size_16" />

    <RelativeLayout
        android:layout_weight="1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="@dimen/size_5"
            android:layout_alignParentBottom="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:lineSpacingExtra="5dp"
            android:lines="1"
            android:padding="@dimen/size_15"
            android:text="@string/long_onclick"
            android:textSize="@dimen/text_size_14" />

    </RelativeLayout>

</LinearLayout>