<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:fitsSystemWindows="true"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <include layout="@layout/appbar_toolbar" />

<ScrollView
    android:scrollbars="none"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_height="250dp"
            android:layout_width="fill_parent"
            android:background="@mipmap/weixinyundong"
            android:orientation="vertical"
            android:gravity="center|center_horizontal|center_vertical"
            >
            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:id="@+id/jieruweixin"
                    android:layout_marginLeft="30dp"
                    android:layout_marginRight="30dp"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:textSize="18dp"
                    android:gravity="center"
                    android:layout_gravity="center"
                    android:textColor="#c0c0c0"
                    android:singleLine="true"
                    android:text="@string/wechat_sports"
                    />
                <Button
                    android:layout_marginTop="80dp"
                    android:id="@+id/xinxin_bangdin"
                    android:layout_width="120dp"
                    android:layout_height="40dp"
                    android:textSize="22dp"
                    android:background="@drawable/weixin"
                    android:gravity="center"
                    android:layout_gravity="center"
                    android:textColor="@color/new_colorAccent"
                    android:singleLine="true"
                    android:text="@string/bangding"
                    />

            </FrameLayout>


        </LinearLayout>

        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
           >
            <LinearLayout
                android:orientation="vertical"
                android:background="#ffffffff"
                android:layout_width="match_parent"
                android:layout_height="match_parent">
                <TextView
                    android:layout_marginTop="10dp"
                    android:layout_marginLeft="30dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="18dp"
                    android:textColor="@color/btn_txt_background"
                    android:text="@string/operation_method"/>
                <TextView
                    android:layout_marginTop="20dp"
                    android:layout_marginLeft="30dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="13dp"
                    android:textColor="@color/btn_txt_background"
                    android:text="@string/first_use"/>


                <TextView
                    android:layout_marginTop="12dp"
                    android:layout_marginLeft="30dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="13dp"
                    android:textColor="@color/btn_txt_background"
                    android:text="@string/please_disconnect"/>
                <TextView
                    android:lineSpacingExtra="8dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginRight="30dp"
                    android:layout_marginLeft="30dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="13dp"
                    android:textColor="@color/btn_txt_background"
                    android:text="@string/openwhchat"/>
                <TextView
                    android:lineSpacingExtra="8dp"
                    android:layout_marginTop="12dp"
                    android:layout_marginLeft="30dp"
                    android:layout_marginRight="30dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="13dp"
                    android:textColor="@color/btn_txt_background"
                    android:text="@string/wechat_home_page"/>
            </LinearLayout>


        </android.support.v7.widget.CardView>



    </LinearLayout>

</ScrollView>



</LinearLayout>
