<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#ffffff"
    android:orientation="vertical">


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="#4dddff"
        android:gravity="center_vertical">

        <TextView
            android:id="@+id/ischange_no"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginLeft="8dp"
            android:text="@string/cancle"
            android:textColor="#ffffffff"
            android:textSize="@dimen/text_size_17" />

        <ImageView
            android:visibility="gone"
            android:id="@+id/image_fanhui"
            android:layout_centerVertical="true"
            android:src="@mipmap/backs"
            android:padding="@dimen/size_15"
            android:layout_marginLeft="8dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/Targetsetting"
            android:textColor="#ffffffff"
            android:textSize="@dimen/size_18" />


        <TextView
            android:id="@+id/ischange_ok"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginRight="8dp"
            android:gravity="center_vertical"
            android:text="@string/complete"
            android:textColor="#ffffffff"
            android:textSize="@dimen/text_size_17" />


    </RelativeLayout>

    <LinearLayout
        android:id="@+id/stepsNumber"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal"
        android:padding="@dimen/size_10">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center_vertical"
            android:text="@string/daily_numberofsteps"
            android:textColor="#333333"
            android:textSize="@dimen/text_size_17" />

        <TextView
            android:id="@+id/step_Number"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center|end"
            android:textColor="#333333"
            android:textSize="@dimen/text_size_17" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center|end"
            android:text="@string/steps"
            android:textColor="#333333"
            android:textSize="@dimen/text_size_17" />


        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginRight="8dp"
            android:background="@mipmap/my_arrow_right" />


    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginLeft="@dimen/size_10"
        android:background="#eeeeee"/>

    <LinearLayout
        android:id="@+id/caloriesBurn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal"
        android:padding="@dimen/size_10">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center_vertical"
            android:text="@string/daily_consunergy"
            android:textColor="#333333"
            android:textSize="@dimen/text_size_17" />

        <TextView
            android:id="@+id/calories_Burn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center|end"
            android:textColor="#333333"
            android:textSize="@dimen/text_size_17" />


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center|end"
            android:text="@string/calories"
            android:textColor="#333333"
            android:textSize="@dimen/text_size_17" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginRight="8dp"
            android:background="@mipmap/my_arrow_right" />


    </LinearLayout>

    <View
        android:id="@+id/yitiaoxian"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginLeft="@dimen/size_10"
        android:background="#eeeeee"/>

    <LinearLayout
        android:id="@+id/sleepingTime"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal"
        android:padding="@dimen/size_10">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center_vertical"
            android:text="@string/daily_sleepduration"
            android:textColor="#333333"
            android:textSize="@dimen/text_size_17" />

        <TextView
            android:id="@+id/sleep_Time"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center|end"
            android:textColor="#333333"
            android:textSize="@dimen/text_size_17" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center|end"
            android:text="@string/hour"
            android:textColor="#333333"
            android:textSize="@dimen/text_size_17" />


        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginRight="8dp"
            android:background="@mipmap/my_arrow_right" />


    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginLeft="@dimen/size_10"
        android:background="#eeeeee"/>

    <LinearLayout
        android:id="@+id/targetDistance"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal"
        android:padding="@dimen/size_10">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center_vertical"
            android:text="@string/daily_distancia"
            android:textColor="#333333"
            android:textSize="@dimen/text_size_17" />

        <TextView
            android:id="@+id/target_Distance"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center|end"
            android:textColor="#333333"
            android:textSize="@dimen/text_size_17" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center|end"
            android:text="@string/km"
            android:textColor="#333333"
            android:textSize="@dimen/text_size_17" />


        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginRight="8dp"
            android:background="@mipmap/my_arrow_right" />


    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginLeft="@dimen/size_10"
        android:background="#eeeeee"/>


</LinearLayout>